adding images for phone screen

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <div class="instagram-wrapper">
         <div class="instagram-phone">
             <img src="./img/phone.png" alt="phone screen" />
+            <img class="phone-screen" src="./img/screen-1.jpg" alt="happy girl" />
+            <img class="phone-screen not-visible" src="./img/screen-2.jpg" alt="applying filter to photo" />
+            <img class="phone-screen not-visible" src="./img/screen-3.jpg" alt="cute cat" />
+            <img class="phone-screen not-visible" src="./img/screen-4.jpg" alt="camera screen" />
+            <img class="phone-screen not-visible" src="./img/screen-5.jpg" alt="instagram personal gallery" />
         </div>
         <div class="instagram-form">
             <div class="group">
