added class for invisible content and js behavior for phone 'slide'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="instagram-wrapper">
         <div class="instagram-phone">
             <img src="./img/phone.png" alt="phone screen" />
-            <img class="phone-screen" src="./img/screen-1.jpg" alt="happy girl" />
+            <img class="phone-screen transtion-screen" src="./img/screen-1.jpg" alt="happy girl" />
             <img class="phone-screen not-visible" src="./img/screen-2.jpg" alt="applying filter to photo" />
             <img class="phone-screen not-visible" src="./img/screen-3.jpg" alt="cute cat" />
             <img class="phone-screen not-visible" src="./img/screen-4.jpg" alt="camera screen" />
@@ -72,6 +72,7 @@
 
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/2.2.1/mdb.min.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
 </body>
 
 </html>
