update passowrd field type, added class for active button and logic for change active and inactive style

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                         <label class="form-label" for="formControlSm">Telefone, nome de usuário ou email</label>
                     </div>
                     <div class="form-outline">
-                        <input type="text" id="formControlSm" class="form-control" oninput="validate()"/>
+                        <input type="password" id="formControlSm" class="form-control" oninput="validate()"/>
                         <label class="form-label" for="formControlSm">Senha</label>
                     </div>
-                    <button type="button" class="btn btn-info btn-disbled" onclick="btnClick()" disabled>Entrar</button>
+                    <button type="button" class="btn btn-info btn-disabled" onclick="btnClick()" disabled>Entrar</button>
                     <div class="or-div">
                         <span class="span-hr"></span>
                         <span class="or-word">OU</span>
