--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/2.2.1/mdb.min.css" rel="stylesheet" />
-    <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="./css/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css">
 
     <link rel="stylesheet" href="./css/styles.css" />
 
@@ -69,7 +67,7 @@
             </div>
         </div>
         <div class="alert alert-success" role="alert">
-            Thanks for viewing and feel free to comment!
+            Thanks for viewing and feel free to feedback!
         </div>
     </div>
 
